KNN Model; ran a few different k values but overall not the best r-squared values. Curious to what r-squared yall get for other models.

--- a/Modules/KNNReg.Rmd
+++ b/Modules/KNNReg.Rmd
@@ -1,4 +1,38 @@
 ```{r}
 load("../Data/SpotifyTrainTestNormXY.Rdata")
-```
 
+library(class)
+library(caret)
+
+#ctrl <- trainControl(method = "cv", number = 10)
+
+#knn_train <- train(spotify_norm_train_x, as.factor(spotify_norm_train_y), method = "knn", tuneGrid = data.frame(k = seq(1, 150, by = 5)), trControl = ctrl)
+#best_k <- knn_train$bestTune$k
+#print(best_k) = 146
+
+knn.m <- knn(spotify_norm_train_x, spotify_norm_test_x, spotify_norm_train_y, k = 38)
+
+knn.pred <- as.numeric(knn.m)
+#print(knn.pred)
+
+knn.pr <- postResample(knn.pred, spotify_norm_test_y)
+
+print(knn.pr)
+
+#k = 5:   RMSE      Rsquared      MAE 
+#   46.25540695  0.01534041 39.32182063 
+
+# k = 146:  RMSE        Rsquared      MAE 
+#      18.844490638  0.006866674  6.249155389 
+
+# k = 8: RMSE      Rsquared      MAE 
+#  45.33168530  0.01616335 37.65990166 
+
+# k = 3:  RMSE       Rsquared     MAE 
+#.     46.74750336  0.01293929 40.34160741 
+# k = 38: RMSE       Rsquared     MAE 
+#.     37.57467042  0.01320804 25.45239633 
+
+
+```
+## All pretty low r squared values; will need to improve the model/ find a way to get the best k
