--- a/Modules/ANN.Rmd
+++ b/Modules/ANN.Rmd
@@ -2,3 +2,16 @@
 load("../Data/SpotifyTrainTestNorm.Rdata")
 ```
 
+```{r}
+library(neuralnet)
+library(caret)
+```
+
+```{r}
+set.seed(12345)
+ann_model <- neuralnet(track_popularity ~ ., data = spotify_norm_train, lifesign = "full")
+
+ann_prediction <- predict(ann_model, spotify_norm_test)
+postResample(ann_prediction, spotify_norm_test$track_popularity)
+```
+
