base model for linear regression

--- a/Modules/LinearRegression.Rmd
+++ b/Modules/LinearRegression.Rmd
@@ -1,3 +1,23 @@
+# Load prepared train and test data
 ```{r}
 load("../Data/SpotifyTrainTest.Rdata")
 ```
+
+# Build model
+```{r}
+linear_basemodel <- lm(track_popularity ~ ., data =spotify_train)
+summary(linear_basemodel)
+coefficients(linear_basemodel)
+```
+# Predict
+```{r}
+linear_base_prediction <- predict(linear_basemodel, spotify_test)
+summary(linear_base_prediction)
+```
+
+# Evaluate
+```{r}
+library(caret)
+postResample(linear_base_prediction, spotify_test$track_popularity)
+```
+
