--- a/Modules/RandomForest.Rmd
+++ b/Modules/RandomForest.Rmd
@@ -1,3 +1,28 @@
 ```{r}
-load("../Data/SpotifyTrainTest.Rdata")
+load("../Data/CleanedData.RData")
+```
+
+```{r}
+library(randomForest)
+library(caret)
+```
+
+```{r}
+set.seed(12345)
+rf <- randomForest(track_popularity ~ ., data = spotify_data)
+rf
+```
+
+```{r}
+ctrl <- trainControl(method = "cv", number = 10,
+                     selectionFunction = "oneSE")
+grid_rf <- expand.grid(.mtry = c(2, 4, 8, 16))
+```
+
+```{r}
+set.seed(12345)
+m_rf <- train(default ~ ., data = credit, method = "rf",
+              metric = "Kappa", trControl = ctrl,
+              tuneGrid = grid_rf)
+m_rf
 ```
