--- a/Modules/DecisionTree.Rmd
+++ b/Modules/DecisionTree.Rmd
@@ -12,16 +12,10 @@ library(caret)
 decision_tree <- C5.0(as.factor(track_popularity) ~ ., data = spotify_train)
 
 # Make predictions on the test set
-decision_tree_pred <- predict(decision_tree, newdata = spotify_test)
+decision_predict <- predict(decision_tree, spotify_test)
 
-# Convert predictions to numeric
-decision_tree_pred <- as.numeric(decision_tree_pred)
-
-# Calculate regression metrics
-metrics <- postResample(pred = decision_tree_pred, obs = spotify_test$track_popularity)
-
-# Print the metrics
-print(metrics)
+#Evaluate predictions
+confusionMatrix(as.factor(decision_predict), as.factor(spotify_test$track_popularity), positive = "1")
 
 ```
 
