track_popularity changed to binary type based on median 43, and some models changed to fit this modification (#7)
* base model for linear regression

* changed track popularity to binary value based on median 43

* changed ann, decisiontree, lr, rf models to fit binary data type of the track popularity

* deleted bc of name change

---------

Co-authored-by: Nishant Dash <67812173+Nishant2022@users.noreply.github.com>

--- a/Modules/DecisionTree.Rmd
+++ b/Modules/DecisionTree.Rmd
@@ -14,8 +14,12 @@ decision_tree <- C5.0(as.factor(track_popularity) ~ ., data = spotify_train)
 # Make predictions on the test set
 decision_predict <- predict(decision_tree, spotify_test)
 
-#Evaluate predictions
-confusionMatrix(as.factor(decision_predict), as.factor(spotify_test$track_popularity), positive = "1")
+# Calculate regression metrics
+metrics <- confusionMatrix(as.factor(decision_tree_pred), as.factor(spotify_test$track_popularity), positive = "1")
+
+# Print the metrics
+print(metrics)
+
 
 ```
 
