--- a/Modules/DecisionTree.Rmd
+++ b/Modules/DecisionTree.Rmd
@@ -13,7 +13,7 @@ decision_tree <- C5.0(as.factor(track_popularity) ~ ., data = spotify_train)
 
 # Make predictions on the test set
 decision_tree_pred <- predict(decision_tree, newdata = spotify_test)
-
+decision_tree_pred
 
 # Calculate regression metrics
 metrics <- confusionMatrix(as.factor(decision_tree_pred), as.factor(spotify_test$track_popularity), positive = "1")
@@ -21,5 +21,8 @@ metrics <- confusionMatrix(as.factor(decision_tree_pred), as.factor(spotify_test
 # Print the metrics
 print(metrics)
 
+```
+```{r}
+saveRDS(decision_tree_pred,"decision_tree_pred.rds")
 ```
 
