--- a/Modules/ANN.Rmd
+++ b/Modules/ANN.Rmd
@@ -11,7 +11,7 @@ library(caret)
 set.seed(12345)
 ann_model <- neuralnet(track_popularity ~ ., data = spotify_norm_train, lifesign = "full")
 
-c <- predict(ann_model, spotify_norm_test)
+ann_prediction <- predict(ann_model, spotify_norm_test)
 summary(ann_prediction)
 ann_pred_binary <- ifelse(ann_prediction > 0.55, 1, 0) # slightly over median = 0.5426
 confusionMatrix(as.factor(ann_pred_binary), as.factor(spotify_norm_test$track_popularity), positive = "1")
