stacked model structure (#10)
* base model for linear regression

* changed track popularity to binary value based on median 43

* changed ann, decisiontree, lr, rf models to fit binary data type of the track popularity

* deleted bc of name change

* knn model with best k

* stacked model structure

* pulling decision tree and svm

* fixed typo

---------

Co-authored-by: Nishant Dash <67812173+Nishant2022@users.noreply.github.com>

--- a/Modules/ANN.Rmd
+++ b/Modules/ANN.Rmd
@@ -17,3 +17,8 @@ ann_pred_binary <- ifelse(ann_prediction > 0.55, 1, 0) # slightly over median = 
 confusionMatrix(as.factor(ann_pred_binary), as.factor(spotify_norm_test$track_popularity), positive = "1")
 ```
 
+```{r}
+saveRDS(ann_pred_binary, "ann_pred.RDS")
+saveRDS(ann_prediction, "ann_prob.rds")
+```
+
