--- a/Modules/KNNReg.Rmd
+++ b/Modules/KNNReg.Rmd
@@ -1,18 +1,21 @@
+We load the normalized data that's seperated into x and y that's used in KNN and the appropriate library.
 ```{r}
 load("../Data/SpotifyTrainTestNormXY.Rdata")
-```
-
-
-```{r}
 library(class)
 library(caret)
+```
 
+We use the train function that is used in model tuning to find best possible k value between 1 and 150. As a result, we get k = 136.
+```{r}
 ctrl <- trainControl(method = "cv", number = 10)
 
 knn_train <- train(spotify_norm_train_x, as.factor(spotify_norm_train_y), method = "knn", tuneGrid = data.frame(k = seq(1, 150, by = 5)), trControl = ctrl)
 best_k <- knn_train$bestTune$k
 print(best_k) # 136
+```
 
+Although we calculated the best k, we tested different numbers of k in case there was a case with higher accuracy and kappa. As we predicted, out of the value we tested, the accuracy and the kappa was the highest when k = 136 when we evaluated our models using confusion matrix.
+```{r}
 knn.m_5 <- knn(spotify_norm_train_x, spotify_norm_test_x, spotify_norm_train_y, k = 5)
 knn.m_7 <- knn(spotify_norm_train_x, spotify_norm_test_x, spotify_norm_train_y, k = 7)
 knn.m_9 <- knn(spotify_norm_train_x, spotify_norm_test_x, spotify_norm_train_y, k = 9)
@@ -20,9 +23,6 @@ knn.m_100 <- knn(spotify_norm_train_x, spotify_norm_test_x, spotify_norm_train_y
 knn.m_best_k <- knn(spotify_norm_train_x, spotify_norm_test_x, spotify_norm_train_y, k = 136)
 knn.m_150 <- knn(spotify_norm_train_x, spotify_norm_test_x, spotify_norm_train_y, k = 150)
 knn.m_200 <- knn(spotify_norm_train_x, spotify_norm_test_x, spotify_norm_train_y, k = 200)
-
-knn_model_nonoptimal_k3 <- knn(tele_norm_train_x, tele_norm_test_x,tele_norm_train_y, k = 3) # gives us factor
-probprediction_knn <- knn(spotify_norm_train_x, spotify_norm_test_x,spotify_norm_train_y, k = 136, prob = TRUE)
 
 confusionMatrix(as.factor(knn.m_5), as.factor(spotify_norm_test_y)) # kappa = 0.133
 confusionMatrix(as.factor(knn.m_7), as.factor(spotify_norm_test_y)) # kappa = 0.1418
@@ -32,7 +32,11 @@ confusionMatrix(as.factor(knn.m_best_k), as.factor(spotify_norm_test_y)) # kappa
 confusionMatrix(as.factor(knn.m_150), as.factor(spotify_norm_test_y)) # kappa = 0.1758
 confusionMatrix(as.factor(knn.m_200), as.factor(spotify_norm_test_y)) # kappa = 0.1756
 ```
+
+We save the prediction data so that it could be easily accessed in the stacked model. Also, we obtain the probablity values of knn prediction instead of the binary values so that we can have more of an accurate prediction in the stacked model.
 ```{r}
+probprediction_knn <- knn(spotify_norm_train_x, spotify_norm_test_x,spotify_norm_train_y, k = 136, prob = TRUE)
+
 saveRDS(knn.m_best_k, "knn_pred.rds")
 saveRDS(probprediction_knn, "knn_prob_pred.rds")
 ```
