--- a/Modules/ANN.Rmd
+++ b/Modules/ANN.Rmd
@@ -1,14 +1,19 @@
-We load the data that is normalized and split into train and test and the necessary libraries for the ann model.
 ```{r ann_load, include=FALSE}
 load("../Data/SpotifyTrainTestNorm.Rdata")
 library(neuralnet)
 library(caret)
+ann_model <- readRDS("../Data/ann_model.rds")
 ```
 
-We build the base model and predict with the base model. 
-```{r ann_train, cache=TRUE}
+## ANN
+
+We build the base model and predict with the base model.
+We trained with two hidden layers, the first with 10 node and the second with six.
+We also increased the step max so that the model could converge.
+The model converged after about 1.26 days of training and 8 million iterations.
+```{r ann_train, eval=FALSE}
 set.seed(12345)
-ann_model <- neuralnet(track_popularity ~ ., data = spotify_norm_train, lifesign = "full")
+ann_model <- neuralnet(track_popularity ~ ., data = spotify_norm_train, hidden = c(10, 6), stepmax = 1e9, lifesign = "full")
 ```
 
 To use the confusion matrix to evaluate our model, we change the ann prediction into a binary data, using the median as a threshold. 
@@ -20,6 +25,7 @@ ann_confusion
 ```
 
 The confusion matrix gives us accuracy of `r ann_confusion$overall[1]`and kappa of `r ann_confusion$overall[2]`.
+This accuracy and kappa is not great.
 
 ```{r ann_save, include=FALSE}
 saveRDS(ann_pred_binary, "../Data/ann_pred.RDS")
