--- a/SpotifyAnalysis.Rmd
+++ b/SpotifyAnalysis.Rmd
@@ -6,9 +6,12 @@ date: "`r Sys.Date()`"
 output:
   html_document:
     toc: true
+    toc_depth: 2
+    toc_float: true
     theme: readable
     highlight: tango
     code_folding: show
+    number_sections: true
 ---
 
 ```{r setup, include=FALSE}
@@ -29,6 +32,9 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r KNN, child="Modules/KNN.Rmd"}
+```
+
+```{r SVM, child="Modules/ANN.Rmd"}
 ```
 
 ```{r SVM, child="Modules/SVM.Rmd"}
